[tool.poetry]
name = "hometast2-8"
version = "0.1.0"
description = ""
authors = ["Mephod1y <mephodiy@i.ua>"]
readme = "README.md"
packages = [{include = "hometast2_8"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
mongoengine = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
